# code-reviewer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  reviewer.py
.github/: dependabot.yml
.github/workflows/: lint-and-test.yml  release.yml
src/app/: main.py
src/app/api/: admin.py  webhooks.py
src/app/core/: config.py  database.py  security.py
src/app/crud/: app_config.py
src/app/models/: entities.py  schemas.py
src/app/scripts/: migrate_config.py
src/app/services/: gemini_service.py  github_service.py
tests/: conftest.py
tests/cli/: test_cli_commands.py
tests/integration/: test_admin_prompt_history.py  test_webhook_flow.py
tests/unit/: test_gemini_service.py  test_github_service.py
